<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.contact.view.ContactActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_225sdp"
            android:src="@drawable/ic_welcoming_vector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="#E5E1E1" />

        <TextView
            android:id="@+id/tv_contact"
            style="@style/adapter_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/contacts"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            tools:ignore="RtlCompat" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E5E1E1" />

        <TextView
            style="@style/adapter_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/terms_and_conditions"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            tools:ignore="RtlCompat" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E5E1E1" />

        <TextView
            style="@style/adapter_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/privacy_policy"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            tools:ignore="RtlCompat" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E5E1E1" />

        <TextView
            style="@style/adapter_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/software_license"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            tools:ignore="RtlCompat" />
    </LinearLayout>
</layout>