<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".features.id_user.view.IDActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_225sdp"
            android:src="@drawable/ic_welcoming_vector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:fontFamily="@font/cairo"
            android:text="@string/upload_identification_id"
            android:textColor="@color/colorPrimary"
            />
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_select_image"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/_92sdp"
            android:layout_height="@dimen/_92sdp"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/default_"/>

        <Button
            android:id="@+id/button_next_email_registeration"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:textColor="@color/white"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_skip_email_regesteration"
            android:layout_width="@dimen/_180sdp"
            android:fontFamily="@font/cairo"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:textColor="@color/colorPrimary"
            tools:targetApi="lollipop" />
    </LinearLayout>
</layout>