<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".features.code.CodeVarActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_225sdp"
            android:src="@drawable/ic_welcoming_vector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_57sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:fontFamily="@font/cairo"
            android:text="@string/enter_confirmation_code"
            android:textColor="@color/colorPrimary"

            />

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:inputType="number"
            android:textColor="#000000"
            app:itemHeight="@dimen/_45sdp"
            app:itemWidth="@dimen/_40sdp"
            app:lineWidth="@dimen/_1sdp"
            android:layout_gravity="center"
            app:itemCount="6"
            app:lineColor="#707070"
            app:viewType="line" />

        <Button
            android:id="@+id/button_next_register_new_account"
            android:layout_width="@dimen/_168sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingHorizontal="@dimen/_38sdp"
            android:fontFamily="@font/cairo"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/colorOrange"
            tools:targetApi="lollipop" />
        <Button
            android:id="@+id/button_skip_email_regesteration"
            android:layout_width="@dimen/_168sdp"
            android:layout_height="@dimen/_45sdp"
            android:fontFamily="@font/cairo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
             />
    </LinearLayout>
</layout>