<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".features.phone.view.PhoneActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_225sdp"
            android:src="@drawable/ic_welcoming_vector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="32dp"
            android:lineSpacingMultiplier="1.38"
            android:text="@string/enterPhoneNumber" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_2sdp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_margin="0dp"
                android:padding="0dp"
                android:id="@+id/input_telephone_number_registeration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cairo"
                android:inputType="phone"
                android:hint="+xxxxxxxxxxxxx"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_next_register_new_account"
            android:layout_width="@dimen/_168sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/cairo"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_skip_email_regesteration"
            android:layout_width="@dimen/_168sdp"
            android:layout_height="@dimen/_45sdp"
            android:fontFamily="@font/cairo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
</layout>