<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".features.varifcation.view.VerificationActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_225sdp"
            android:src="@drawable/ic_welcoming_vector" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:text="@string/verfication"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />




        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_90sdp"
            android:background="#E5E1E1" />

        <TextView
            android:id="@+id/tv_verfiy_id"
            android:layout_gravity="center_vertical|center"
            style="@style/adapter_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/check_verification_state_for_user_id"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            tools:ignore="RtlCompat" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E5E1E1" />

        <TextView
            android:id="@+id/tv_verfiy"
            android:layout_gravity="center_vertical|center"
            style="@style/adapter_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/check_verification_state"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal"
            tools:ignore="RtlCompat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E5E1E1" />



    </LinearLayout>
</layout>